<!-- 

   SIROCCO
   Copyright (C) 2013 Orange
   Contact: sirocco@ow2.org

   This library is free software; you can redistribute it and/or
   modify it under the terms of the GNU Lesser General Public
   License as published by the Free Software Foundation; either
   version 2.1 of the License, or any later version.

   This library is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
   Lesser General Public License for more details.

   You should have received a copy of the GNU Lesser General Public
   License along with this library; if not, write to the Free Software
   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307
   USA

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.ow2.sirocco.cloudmanager</groupId>
		<artifactId>cloudmanager-multi</artifactId>
		<version>0.6.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<groupId>org.ow2.sirocco.cloudmanager.test</groupId>
	<artifactId>ejb-test</artifactId>
	<packaging>jar</packaging>
	<name>SIROCCO :: CloudManager :: Test :: EJB</name>


	<properties>
		<org.jboss.arquillian.version>1.1.1.Final</org.jboss.arquillian.version>
		<version.shrinkwrap.resolvers>2.0.0</version.shrinkwrap.resolvers>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.shrinkwrap.resolver</groupId>
				<artifactId>shrinkwrap-resolver-bom</artifactId>
				<version>${version.shrinkwrap.resolvers}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${org.jboss.arquillian.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>org.ow2.sirocco.cloudmanager</groupId>
			<artifactId>sirocco-cloudmanager-core-api</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.sirocco.cloudmanager</groupId>
			<artifactId>sirocco-cloudmanager-core-manager</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.sirocco.cloudmanager</groupId>
			<artifactId>sirocco-cloudmanager-connector-mock</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>7.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.protocol</groupId>
			<artifactId>arquillian-protocol-servlet</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
			<scope>test</scope>
			<type>jar</type>
		</dependency>
	</dependencies>


	<pluginRepositories>
		<pluginRepository>
			<id>codehaus-snapshots</id>
			<name>Codehaus Snapshots</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>codehaus-snapshots</id>
			<name>Codehaus Snapshots</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<configuration>
					<argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${project.build.directory}/entities</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<executions>
					<execution>
						<id>Copy persistence.xml</id>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<phase>process-classes</phase>
						<configuration>
							<outputDirectory>${project.build.outputDirectory}</outputDirectory>
							<overwrite>true</overwrite>
							<resources>
								<resource>
									<directory>${basedir}/src/main/resources</directory>
									<filtering>true</filtering>
									<includes>
										<include>persistence.xml</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>javax.validation</groupId>
						<artifactId>validation-api</artifactId>
						<version>1.1.0.Final</version>
					</dependency>
					<dependency>
						<groupId>org.eclipse.persistence</groupId>
						<artifactId>org.eclipse.persistence.jpa</artifactId>
						<version>2.5.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>Copy JPA entities</id>
						<phase>process-sources</phase>
						<configuration>
							<tasks>
								<copy todir="${project.build.directory}/entities"
									overwrite="true">
									<fileset
										dir="../sirocco-model/cimi/src/main/java"
										includes="**/*.*" />
								</copy>
							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>Weave and enhance regular entities</id>
						<goals>
							<goal>run</goal>
						</goals>
						<phase>process-classes</phase>
						<configuration>
							<tasks>
								<taskdef name="weave"
									classname="org.eclipse.persistence.tools.weaving.jpa.StaticWeaveAntTask"
									classpathref="maven.plugin.classpath" />

								<weave source="${project.build.directory}/classes" target="${project.build.directory}/classes"
									logLevel="FINEST" />
							</tasks>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>glassfish-embedded-arquillian</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.glassfish.main.extras</groupId>
					<artifactId>glassfish-embedded-all</artifactId>
					<version>4.0</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.glassfish.jersey.core</groupId>
					<artifactId>jersey-client</artifactId>
					<version>2.4</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-glassfish-embedded-3.1</artifactId>
					<version>1.0.0.CR4</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>com.h2database</groupId>
					<artifactId>h2</artifactId>
					<version>1.3.174</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>


</project>

